Fixed problems with CourseProg, Module and test classes using immutable Lists rather than ArrayLists.