@@ -8,6 +8,7 @@ import org.junit.jupiter.api.Test;
 import year4.softeng3.assignment1.courseLib.Module;
 import year4.softeng3.assignment1.courseLib.Student;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
@@ -16,7 +17,7 @@ public class ModuleTest {
     private String testName = "TestModule";
     private String testId = "GY350";
     private Student testStudent = new Student("TestName", new LocalDate(1997, 8, 1), "15310091");
-    private Module testModule = new Module(testName, testId, Arrays.asList(testStudent));
+    private Module testModule = new Module(testName, testId, List.of(testStudent));
     @Test
     void shouldThrowExceptionOnInitilisationIfIdInIncorrectFormat() {
         assertThrows(IllegalArgumentException.class, () -> new Module(testName, "NotValidID"));
@@ -29,14 +30,14 @@ public class ModuleTest {
 
     @Test
     void shouldGetStudents() {
-        assertThat(Arrays.asList(testStudent), is(testModule.getStudents()));
+        assertThat(List.of(testStudent), is(testModule.getStudents()));
     }
 
     @Test
     void shouldAddStudentIfNotPreviouslyAdded() {
-        Module modifiedModule = new Module(testName, testId, Arrays.asList(testStudent));
+        Module modifiedModule = new Module(testName, testId, List.of(testStudent));
         Student newStudent = new Student("Student", new LocalDate(1998, 8, 2), "testId");
-        List<Student> modifiedList = Arrays.asList(testStudent, newStudent);
+        ArrayList<Student> modifiedList = new ArrayList<>(List.of(testStudent, newStudent));
         modifiedModule.addStudent(newStudent);
         assertThat(modifiedList, is(modifiedModule.getStudents()));
     }
@@ -44,7 +45,7 @@ public class ModuleTest {
     @Test
     void shouldNotAddStudentIfPreviouslyAdded() {
         Student newStudent = new Student("Student", new LocalDate(1998, 8, 2), "testId");
-        List<Student> modifiedList = Arrays.asList(testStudent, newStudent);
+        ArrayList<Student> modifiedList = new ArrayList<>(List.of(testStudent, newStudent));
         Module modifiedModule = new Module(testName, testId, modifiedList);
         modifiedModule.addStudent(newStudent);
         assertThat(modifiedList, is(modifiedModule.getStudents()));
